--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "stronger50", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
+<script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "srsanchez", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
 <title>Private service</title>
-<meta content='https://i.postimg.cc/HkjJS7b4/Screenshot-849.png' property='og:image'/>
+<meta content='https://i.postimg.cc/KcpssW0G/2450420397-827362699357447-3548609788164258443-nnn.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -36,18 +37,18 @@ Non
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-Toutes nos félicitations! Acceptez-vous de respecter les femmes nues présentées ci-dessous ? Appuyez sur "ENTER" ci-dessous pour prendre rendez-vous, inscrivez-vous gratuitement et profitez des belles filles anales et vaginales qui vous attendent. </div>
+¡AVERTISSEMENT! Acceptez-vous de respecter les femmes nues que vous verrez ci-dessous ? Si vous connaissez quelqu'un, ne lui dites pas et ne répandez pas de rumeurs. </div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://searchfordating.com/tds/ae?tdsId=s7017yas_r&tds_campaign=s7017yas&utm_sub=opnfnl&s1=ps&utm_source=int&affid=f5ff31cb&subid={Stronger}&clickid={clickid}&subid2={subid2}}" class="step-btn submit-btn tr-submit-button showmail">JE SUIS D'ACCORD
+<a href="https://searchfordating.com/tds/ae?tdsId=s7017yas_r&tds_campaign=s7017yas&utm_sub=opnfnl&s1=ps&utm_source=int&affid=f5ff31cb&subid={Srsanchez}&clickid={clickid}&subid2={subid2}" class="step-btn submit-btn tr-submit-button showmail">JE SUIS D'ACCORD
 </a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://video.twimg.com/ext_tw_video/1526551323147223045/pu/vid/508x856/k64RKE5mt_-cP8hL.mp4" type="video/mp4" type="video/mp4">
+<source src="https://cdn-bimi.akamaized.net/landings/268643/1641828300/images/1.mp4" type="video/mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
